Fix navbar display on small devices Navbar logo: display none on small devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -408,6 +408,13 @@ footer
 // Extra small devices
 @media only screen and (max-width: 575px)
 {
+   .navbar
+   {
+      .navbar-logo
+      {
+         display: none;
+      }
+   }
    .career,
    .sport,
    .english,
